   confirmation messages. With no switch, silent_pemit determines whether
   the message is shown. Suggested by Paige for consistancy. [MG]
   
Attributes:
 * New no_debug flag, which prevents debug info being shown for an attribute
   when the object is set DEBUG. [MG]
   
Config:
 * New @config option chan_title_len controls the length of @channel/title's.
   Suggested by Paige. [MG]

Functions:
 * lockfilter() lets you filter a list of dbrefs using a lock key. [GM]
 * align() now has '$' (nofill) as an option. Ideal for rightmost columns.
   Suggested by Minion. [GM]
 * dig() now takes an optional garbage dbref argument to specify the new
   dbref. Suggested by Paige. [GM]
 * convutctime() and convtime(<time>, utc) to convert a timestring to
   # of seconds since UTC. Patch by Minion.
 * powers() with no arguments now returns a list of powers, similar to
   lflags() with no args. [MG]
 * trim() can now trim multiple characters. [MG] [GM]
 * In some cases, privs are no longer needed to use locate(). [MG]
 * cmogrifier(), returns the mogrifier object for a channel. Suggested by
   Trinsec, patch by Minion.

Minor Changes:
 * The Can_Nspemit @power has been renamed to Can_Spoof, to better reflect
   its uses. Can_Nspemit is still an alias. [MG]
 * Considerable improvement in the speed of functions that sort
   case-insensitively, particularly using 'm' sort (Now default). [GM]
 * Combined fun_setinter, fun_setdiff and fun_setunion into fun_setmanip. [GM]
 * For hardcoders: list2arr and list2arr_ansi now take a third argument
   on whether to include empty items. [GM]
 * page and @mail will report to you if your recipient(s) cannot reply
   to you. Suggested by Paige. [GM]
 * The debug attribute flag now shows more debug info. [MG]
 * @oemit now does better object matching, can match names with spaces when
   enclosed in double quotes, and, when given a <room> but no matching
   objects, shows the message to everyone in the room, instead of noone.